WE-4796 fix iframe not aligned with vimeo

--- a/components/utilities.scss
+++ b/components/utilities.scss
@@ -94,7 +94,7 @@ label:has(+ :is(input, textarea):required)::after {
   position: relative;
   overflow: hidden;
   width: 100%;
-  padding-top: round(56.25%); // 16:9 aspect ratio
+  padding-top: 56.25%; // 16:9 aspect ratio
   iframe {
     position: absolute;
     top: 0;
